--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-6 col-12">
                             <div class="speakers-thumb">
-                                <img src="images/avatar/happy-asian-man-standing-with-arms-crossed-grey-wall.jpg" class="img-fluid speakers-image" alt="">
+                                <img src="images/avatar/Capture.PNG" class="img-fluid speakers-image" alt="">
 
                                 <small class="speakers-featured-text">Featured</small>
 
@@ -212,7 +212,7 @@ https://templatemo.com/tm-575-leadership-event
 
                         <div class="col-lg-6 col-12">
                             <div class="speakers-thumb">
-                                <img src="images/avatar/happy-asian-man-standing-with-arms-crossed-grey-wall.jpg" class="img-fluid speakers-image" alt="">
+                                <img src="images/avatar/Capture.PNG" class="img-fluid speakers-image" alt="">
 
                                 <small class="speakers-featured-text">Featured</small>
 
@@ -724,7 +724,7 @@ https://templatemo.com/tm-575-leadership-event
                                 <div class="venue-info-body">
                                     <h5 class="d-flex">
                                         <i class="bi-geo-alt me-2"></i> 
-                                        <span>Room No. 404, 2nd Floor, Yoha Towers, Eshwaran Kovil street, Perumanallur - 641 666</span>
+                                        <span>Room No. 206, Yoha Towers, Eshwaran Kovil street, Perumanallur - 641 666</span>
                                     </h5>
 
                                     <h5 class="mt-4 mb-3">
