Adding profile photos

--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
                             <h1 class="text-white mb-4"><u class="text-info">Leadership</u> Conference 2022</h1>
 
                             <div class="d-flex justify-content-center align-items-center">
-                                <span class="date-text">July 12 to 18, 2022</span>
+                                <!-- <span class="date-text">July 12 to 18, 2022</span> -->
 
                                 <span class="location-text">Yoha Tower</span>
                             </div>
@@ -179,13 +179,13 @@
 
                     <div class="col-lg-6 col-12">
                         <div class="speakers-thumb">
-                            <img src="images/avatar/Capture.PNG" class="img-fluid speakers-image" alt="">
+                            <img src="images/avatar/nagaraju.PNG" style="height: 50%;width: 50%;" class="img-fluid speakers-image" alt="">
 
                             <small class="speakers-featured-text">Featured</small>
 
                             <div class="speakers-info">
 
-                                <h5 class="speakers-title mb-0">R.Nagaraju M.SC., M.Phil., SET, Phd.,
+                                <h5 class="speakers-title mb-0">R.Nagaraju M.SC., M.Phil., SET, PhD.,
                                     
                                 </h5>
 
@@ -221,13 +221,13 @@
 
                     <div class="col-lg-6 col-12">
                         <div class="speakers-thumb">
-                            <img src="images/avatar/Capture.PNG" class="img-fluid speakers-image" alt="">
+                            <img src="images/avatar/nagaraju_wife.jpg" style="height: 50%;width: 50%;" class="img-fluid speakers-image" alt="">
 
                             <small class="speakers-featured-text">Featured</small>
 
                             <div class="speakers-info">
 
-                                <h5 class="speakers-title mb-0">R.Nagaraju M.SC., M.Phil., SET, Phd.,
+                                <h5 class="speakers-title mb-0">R.Nagaraju M.SC., M.Phil., SET, PhD.,
                                     
                                 </h5>
                                 <p class="speakers-text mb-0">CEO / Founder</p>
