--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         </section>
 
 
-        <section class="speakers section-padding" id="section_3">
+        <section class="speakers py--5" id="section_3">
             <div class="container">
                 <div class="row">
 
@@ -206,7 +206,7 @@
                 </div>
             </div>
         </section>
-        <section class="speakers section-padding" id="section_3">
+        <section class="speakers py-5" id="section_3">
             <div class="container">
                 <div class="row">
 
@@ -227,7 +227,7 @@
 
                             <div class="speakers-info">
 
-                                <h5 class="speakers-title mb-0">R.Nagaraju M.SC., M.Phil., SET, PhD.,
+                                <h5 class="speakers-title mb-0">A.Saranya B.SC., MBA., B.Ed(Pursuing)
                                     
                                 </h5>
                                 <p class="speakers-text mb-0">CEO / Founder</p>
@@ -248,7 +248,7 @@
             </div>
         </section>
 
-        <section class="schedule section-padding" id="section_4">
+        <section class="schedule py-5" id="section_4">
             <div class="container">
                 <div class="row">
 
@@ -605,7 +605,7 @@
             </div>
         </section>
 
-        <section class="call-to-action section-padding">
+        <section class="call-to-action py-5">
             <div class="container">
                 <div class="row align-items-center">
 
